<resources>
    <string name="app_name" translatable="false">PasswordApp</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="add_button">add button</string>
    <string name="search_passwords">Search passwords</string>
    <string name="security_dashboard">Security Dashboard</string>
    <string name="storage">Storage</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="enable_app_lock">Enable app lock</string>
    <string name="clear_clipboard_after_copy">Clear clipboard after copy</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="about">About</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="generate_password">Generate Password</string>
    <string name="passwordapp_v1_0" translatable="false">PasswordApp v1.0</string>
    <string name="copy_password">Copy Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register" translatable="false">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">Logout</string>
</resources>